--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="red"></div>
     <div class="blue"></div>
-    <div class="green"></div>
+    <div class="white"></div>
 
 </body>
 </html>
